# electronics-shopping-api

./: .gitignore  Cargo.toml  configuration.yaml
.github/workflows/: general.yml
.sqlx/: query-069aa639a3415b4ad6562729ef275c7b6fbdf755fb85bd0094bf0407ef213dca.json  query-3a0fa1807c512b995ccdc6a6a61917b7e7d6c3c23e3ba8c472be2d0f8d7e0e03.json  query-cfc8cafe76dbcfba7fe5f4eef606c066ffd43dfaa40c6f5b1449f6f844dbbab9.json  query-f50b8ed5d4e4b8c1ce0e5b001701413057d643433c468f33cde8d1436e9347fe.json
migrations/: 20260619125204_create_users_table.sql  20260622093556_create_products_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: mod.rs  products.rs  users.rs
tests/: health_check.rs  products.rs  users.rs
tests/helpers/: mod.rs
