[package]
name = "electronics-shopping-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
bigdecimal = { version = "0.4.10", features = ["serde"] }
chrono = "0.4.45"
config = "0.15.24"
rust_decimal = "1.42.1"
serde = "1.0.228"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "macros", "migrate", "chrono", "uuid", "bigdecimal"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.3", features = ["v4"] }

[dev-dependencies]
reqwest = "0.13.4"
